syntax = "proto3";

package wallet;

service WalletService {
  rpc GenerateWallet (GenerateWalletRequest) returns (GenerateWalletResponse);
}

message GenerateWalletRequest {
  string network = 1;
}

message GenerateWalletResponse {
  string public_address = 1;
  string private_key = 2;
  string network = 3;
  string mnemonic = 4;
}